--- a/src/styles/texteditor.scss
+++ b/src/styles/texteditor.scss
@@ -7,7 +7,7 @@
     resize: vertical;
     box-sizing: border-box;
     border: var(--primary-color) 1px solid;
-    margin-bottom: 1vh;
+    margin-bottom: var(--s2);
 }
 
 .text-editor-label {
